--- a/src/scss/page/board/taskInfo/checklist.scss
+++ b/src/scss/page/board/taskInfo/checklist.scss
@@ -35,7 +35,7 @@
 }
 
 .checklist__info {
-  margin-bottom: 1rem;
+  margin-bottom: 2rem;
 
   .add-item {
 
